Update AutoCompleteProvider.java